--- a/glamyze/templates/user/product_list.html
+++ b/glamyze/templates/user/product_list.html
@@ -6,7 +6,7 @@
         <div class="block2-pic hov-img0">
             <img src="{{product.image1.url}}" alt="IMG-PRODUCT">
 
-            <a href="" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+            <a href="{% url 'product_app:product_view' product.id %}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04">
                 View
             </a>
         </div>
