--- a/glamyze/templates/user/summary.html
+++ b/glamyze/templates/user/summary.html
@@ -32,26 +32,40 @@
                 <h4 class="mtext-109 cl2 p-b-30">
                     Order Summary
                 </h4>
-
-                <!-- Items in Order -->
-                <div class="order-items m-b-30">
-                    {% for item in cart_items %}
-                    <div class="flex-w flex-t p-b-15 align-items-center">
-                        <div class="size-208">
-                            <span class="stext-110 cl2">
-                                {{ item.productvariant.product.product_name }} - {{ item.productvariant.size.size_code }}
-                                (x{{ item.quantity }})
-                            </span>
-                        </div>
-                        <div class="size-209 text-right">
-                            <span class="mtext-110 cl2">
-                                ₹{{ item.total_price }}
-                            </span>
-                        </div>
-                    </div>
-                    {% endfor %}
+        
+                
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Product Name</th>
+                                <th>Size</th>
+                                <th>Price</th>
+                                <th>Offer Price</th>
+                                <th>Quantity</th>
+                                <th>Total Price</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in cart_items %}
+                            <tr>
+                                <td>{{ item.productvariant.product.product_name }}</td>
+                                <td>{{ item.productvariant.size.size_code }}</td>
+                                <td>{{ item.productvariant.price}}</td>
+                                {% if item.offer_price %}
+                                <td>₹{{ item.offer_price }} <span style="color: green;">--{{ item.productvariant.product.offer.offer_name}}</span></td> 
+                                {% else %}
+                                <td>No offer for this product</td>
+                                {% endif %}
+                                <td>{{ item.quantity }}</td>
+                                
+                                <td>₹{{ item.total_price }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-
+        
                 <!-- Total Price -->
                 <div class="flex-w flex-t p-t-27 p-b-33">
                     <div class="size-208">
