--- a/glamyze/templates/user/blank_layout.html
+++ b/glamyze/templates/user/blank_layout.html
@@ -96,19 +96,16 @@
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-							<i class="zmdi zmdi-search"></i>
-						</div>
-
+					
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="0">
-							<a href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
+							<a style="color: black;" href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
 						</div>
 
 						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
 						<a href="{% url 'address_app:account_management' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
-							<i class="zmdi zmdi-account"></i> <!-- Change to your desired icon -->
+							<i class="zmdi zmdi-account"></i> 
 						</a>
 					</div>
 				</nav>
@@ -124,12 +121,8 @@
 
 			<!-- Icon header -->
 			<div class="wrap-icon-header flex-w flex-r-m m-r-15">
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
-					<i class="zmdi zmdi-search"></i>
-				</div>
-
 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
-					<a href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
+					<a style="color: black;" href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
 				</div>
 
 				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
@@ -151,29 +144,11 @@
 			<ul class="topbar-mobile">
 				<li>
 					<div class="left-top-bar">
-						Free shipping for standard order over $100
+						Free shipping all over india
 					</div>
 				</li>
 
-				<li>
-					<div class="right-top-bar flex-w h-full">
-						<a href="#" class="flex-c-m p-lr-10 trans-04">
-							Help & FAQs
-						</a>
-
-						<a href="{% url 'address_app:account_management' %}" class="flex-c-m p-lr-10 trans-04">
-							My Account
-						</a>
-
-						<a href="#" class="flex-c-m p-lr-10 trans-04">
-							EN
-						</a>
-
-						<a href="#" class="flex-c-m p-lr-10 trans-04">
-							USD
-						</a>
-					</div>
-				</li>
+				
 			</ul>
 
 			<ul class="main-menu-m">
@@ -193,36 +168,17 @@
 					<a href="">Contact</a>
 				</li>
 					<li>
-							{% if request.user.is_authenticated %}
-								<a href="{% url 'auth_app:logout' %}" id='logout-link'>Logout</a>
-							{% else %}
-								<a href="{% url 'auth_app:login' %}">Login</a>
-							{% endif %}
-							</li>
+						{% if request.user.is_authenticated %}
+							<a href="{% url 'auth_app:logout' %}" id='logout-link'>Logout</a>
+						{% else %}
+							<a href="{% url 'auth_app:login' %}">Login</a>
+						{% endif %}
+					</li>
 			</ul>
 		</div>
 
-		<!-- Modal Search -->
-		<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
-			<div class="container-search-header">
-				<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
-					<img src="{% static 'images/icons/icon-close2.png' %}" alt="CLOSE">
-				</button>
-
-				<form class="wrap-search-header flex-w p-l-15">
-					<button class="flex-c-m trans-04">
-						<i class="zmdi zmdi-search"></i>
-					</button>
-					<input class="plh3" type="text" name="search" placeholder="Search...">
-				</form>
-			</div>
-		</div>
-	</header>
-
-
-
 		
-
+	</header>
 	<!-- Slider -->
 	<section class="section-slide">
 		{% block slider %}
