--- a/glamyze/templates/user/edit_address.html
+++ b/glamyze/templates/user/edit_address.html
@@ -77,30 +77,39 @@
             <div class="row mb-3">
               <div class="col-12">
                   <div class="form-group d-flex align-items-center">
-                      <label class="me-3 mb-0">Address Type:</label>
-                      <div class="d-flex">
-                          <div class="form-check me-4">
+                      <label  style="margin-right: 25px;">Address Type:</label>
+                      <div class="d-flex" >
+                          <div class="form-check " style="margin-right: 50px;">
                               <input type="radio" class="form-check-input" id="homeAddressEdit" name="addressType"
                                      value="home"
                                      {% if address.office_home == 'home' %}checked{% endif %} required>
-                              <label class="form-check-label" for="homeAddressEdit">Home Address</label>
+                              <label class="form-check-label" style="margin-left: -23px;" for="homeAddressEdit">Home Address</label>
                           </div>
                           <div class="form-check">
                               <input type="radio" class="form-check-input" id="officeAddressEdit"
                                      name="addressType"
                                      value="office"
                                      {% if address.office_home == 'office' %}checked{% endif %}>
-                              <label class="form-check-label" for="officeAddressEdit">Office Address</label>
+                              <label class="form-check-label" style="margin-left: -23px;" for="officeAddressEdit">Office Address</label>
                           </div>
                       </div>
                   </div>
               </div>
             </div>
-
-            <!-- Submit and Cancel Buttons -->
+            {% if errors %}
+            <div style="display: flex; align-items: center; justify-content: center;">
+            <div class="alert alert-danger align-center" >
+                <ul>
+                    {% for error in errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+          </div>
+            {% endif %}
             <div class="d-flex">
-              <button type="submit" class="btn btn-dark mr-3">UPDATE</button> <!-- Change button text to UPDATE -->
-              <button type="button" onclick="window.history.back();" class="btn btn-outline-secondary">CANCEL</button> <!-- Go back to previous page -->
+              <button type="submit" class="btn btn-dark mr-3">UPDATE</button> 
+              <a type="button" href="{% url 'address_app:address_view' %}" class="btn btn-outline-secondary">CANCEL</a> 
             </div>
 
           </form>
